[package]
name = "labby"
description = "Pluggable homelab CLI + MCP server. One binary, runtime service selection."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["homelab", "mcp", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "labby"
path = "src/main.rs"
test = false

[dependencies]
labby-apis = { path = "../labby-apis", default-features = false }
labby-auth = { path = "../labby-auth", features = ["http-axum", "upstream-oauth-rmcp"] }
labby-runtime = { path = "../labby-runtime" }
labby-codemode = { path = "../labby-codemode", optional = true }
labby-gateway = { path = "../labby-gateway", optional = true }
labby-web = { path = "../labby-web" }

tokio = { workspace = true, features = ["process"] }
process-wrap = { version = "9.1.0", default-features = false, features = [
  "tokio1",
  "process-group",
] }
nix = { version = "0.31", default-features = false, features = [
  "signal",
  "process",
  "user",
] }
sysinfo = { version = "0.38", default-features = false, features = [
  "system",
  "disk",
  "network",
] }
futures.workspace = true
reqwest.workspace = true
url.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
jiff.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"

clap.workspace = true
clap_complete.workspace = true
dialoguer.workspace = true

dotenvy.workspace = true
toml.workspace = true
dirs = "5"


base64.workspace = true
fd-lock = "4"
tempfile = "3.27"
subtle = "2"
sha2 = "0.11"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
hmac.workspace = true
chacha20poly1305 = "0.10"
dashmap = "6"
diffy-imara = "0.3"
arc-swap = "1"
tokio-util = { version = "0.7", features = ["rt", "compat", "codec"] }
strip-ansi-escapes = "0.2"
agent-client-protocol = { version = "=0.13.1", features = ["unstable"], optional = true }

hex = "0.4"
getrandom = "0.4"
ulid = "1"

# optional — deploy feature
regex = { version = "1" }

rmcp.workspace = true
# Transport-layer body-cap wrapper (dispatch/upstream/http_client.rs) uses
# bytes::Bytes and sse-stream::SseStream directly. `http` types come in via
# reqwest::header (already a direct dep).
bytes = "1"
sse-stream = "0.2"
rusqlite.workspace = true
r2d2 = "0.8"
r2d2_sqlite = "0.33"
uuid.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
utoipa.workspace = true

oauth2 = { version = "5.0", default-features = false }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }

# optional — fs feature (workspace filesystem browser)
walkdir = { version = "2", optional = true }
globset = { version = "0.4", optional = true }
unicode-normalization = { version = "0.1", optional = true }
rustix = { version = "1", features = ["fs"], optional = true }
toml_edit = "0.23"

[target.'cfg(unix)'.dependencies]
sd-notify = { version = "0.5", optional = true }

[target.'cfg(windows)'.dependencies]
# Windows Job Object process-tree reaping. The raw `windows-sys` FFI lives in
# `labby-winjob` (the sanctioned unsafe crate), so `lab` stays unsafe-free and
# keeps the workspace `unsafe_code = "forbid"` lint. This mirrors how the Unix
# path routes its unsafe through the external `nix` crate.
labby-winjob = { path = "../labby-winjob" }

[dev-dependencies]
labby-auth = { path = "../labby-auth", features = ["http-axum", "upstream-oauth-rmcp"] }
wiremock.workspace = true
proptest = "1"

[lib]
path = "src/lib.rs"

# Feature-slice contract:
# - `default` keeps the production all-features binary.
# - `all` is the authoritative development and release build.
# - Product slices must compile with `--no-default-features --features <slice> --all-targets`.
# - Slices are compile-surface checks, not minimal dependency graph profiles; base runtime crates
#   may remain normal dependencies until a dedicated dependency-slimming pass makes them optional.
# - Supported standalone product slices are: gateway, marketplace, fs, deploy, acp_registry.
# - `mcpregistry` is owned by marketplace in this crate; do not treat it as standalone here.
# - `acp`, `nodes`, and `stash` are feature-gated base capabilities: not standalone
#   products, but excludable so a gateway-only build stays lean. `marketplace`
#   requires `acp` + `stash`. `doctor`, `setup`, `logs` (local), docs generation,
#   and the `serve` base remain always-on.
# - Helper/internal features are not standalone product slices unless this comment is updated.
[features]
acp = ["dep:agent-client-protocol"]
acp_registry = ["labby-apis/acp_registry", "labby-runtime/acp_registry"]
node-runtime = []
all = ["labby-apis/all", "lab-admin", "acp", "acp_registry", "deploy", "gateway", "marketplace", "nodes", "stash"]
gateway = ["dep:labby-codemode", "dep:labby-gateway"]
# Depends on `gateway` because marketplace's stdio-install validation reuses
# the shared spawn-guard/SSRF checks, which now live in labby-gateway (moved
# out of labby-runtime so labby-auth/labby-codemode don't pull them in).
# Also requires `acp` (marketplace fork dispatch drives ACP sessions via
# dispatch/marketplace/acp_dispatch.rs), `nodes` (remote plugin install sends
# RPCs to fleet nodes via dispatch/node/send.rs), and `stash` (fork
# persistence goes through dispatch/marketplace/stash_bridge.rs).
marketplace = ["labby-apis/mcpregistry", "labby-runtime/marketplace", "gateway", "acp", "nodes", "stash"]
services-all = [
]
nodes = []
stash = []
default = ["all"]
deploy = ["labby-apis/deploy", "labby-runtime/deploy"]
fs = ["dep:walkdir", "dep:globset", "dep:unicode-normalization", "dep:rustix"]
lab-admin = []
mcpregistry = ["marketplace"]
systemd = ["dep:sd-notify"]
test-utils = []
[lints]
workspace = true
