[package]
name = "broadcastr-emit"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "broadcastr-emit"
path = "src/main.rs"

[dependencies]
ulid = "1"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
