[package]
name = "broadcastr"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "broadcastr"
path = "src/main.rs"

[dependencies]
clap      = { version = "4", features = ["derive"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
ulid      = "1"
chrono    = { version = "0.4", features = ["clock"] }
notify    = "6"
